# login-utils

./: .cproject  .cvsignore  .gitignore  .project  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  Vagrantfile  acinclude.m4  configure.ac
src/: Makefile.am
src/X/: Xdefaults
src/X11/: ConfigFvwmButtons  ConfigFvwmIconMan  ConfigFvwmPager  Makefile.am  Xdefaults  Xdefaults.cmac  fvwm.config  fvwm.host.bugsy  fvwm.host.cmac  fvwm.host.cport  fvwm.host.rand  fvwm.host.snow  fvwm.host.trip  gtkrc-2.0  next_wallpaper.bash  rand_wallpaper.bash  wallpaper-next.bash  wallpaper.bash  wallpaper.pl  xinitrc  xmodmap  xmodmap.apple
src/bash/: Makefile.am  bash_aliases  bash_completion  bash_logout  bash_profile  bash_profile_Cmac.local  bash_profile_Darwin  bash_profile_SunOS  bash_profile_cscape  bash_profile_cworld  bash_profile_darwin10.3.0  bash_profile_darwin11.2.0  bash_profile_darwin11.3.0  bash_profile_darwin9.5.0  bash_profile_mirage  bash_profile_sideswipe  bash_profile_solaris2.6  bash_profile_solaris2.8  bash_profile_solaris2.9  bash_profile_soundwave  bash_profile_user  bash_profile_user_Cmac.local  bash_profile_user_cscape  bash_profile_user_mirage  bash_profile_user_sideswipe  bash_profile_user_soundwave  bash_profile_womac  bash_setldlibpath  bashrc  gdbinit  gitconfig  vimrc
src/ksh/: Makefile.am  kshrc  profile.SunOS  profile.solaris2.8  profile.solaris2.9
src/other/: dbxrc
src/ssh/: environment
src/xemacs/: Makefile  customize-21.4.el  customize-21.5.el  emacs  init-darwin.el  init.el
test/: .gitignore  Makefile.am  make.out  runtests.bash  virttest.py
