dnl
dnl File:		configure.ac
dnl Project:	 
dnl Desc:
dnl
dnl   Process this file with autoconf to produce a configure script.
dnl
dnl Notes:
dnl
dnl Author(s):   Paul Houghton <paul4hough@gmail.com>
dnl Created:     06/05/2003 19:10
dnl
dnl Revision History: (See end of file for Revision Log)
dnl
dnl	$Author$
dnl	$Date$
dnl	$Name$
dnl	$Revision$
dnl	$State$
dnl
dnl $Id$
dnl

AC_PREREQ(2.57)
AC_INIT( LoginUtils,
	 1.01,
	 Paul Houghton <paul4hough@gmail.com> )

AM_INIT_AUTOMAKE

AC_CANONICAL_HOST
# Checks for programs.
AC_PROG_AWK

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Other
PAH_EMAIL_ADDR
PAH_HOSTNAME
PAH_CVSROOT

AC_CONFIG_FILES([Makefile
	         src/Makefile
		 src/bash/Makefile
		 src/ksh/Makefile
		 src/X11/Makefile])
AC_OUTPUT

