dnl 2003-06-05 (cc) Paul Houghton <paul4hough@gmail.com>

AC_PREREQ([2.57])
AC_INIT([login-utils],[1.03],[Paul Houghton <paul4hough@gmail.com> ])

AC_PREFIX_DEFAULT([])

AM_INIT_AUTOMAKE

AC_CANONICAL_HOST
# Checks for programs.
AC_PROG_AWK
AC_PROG_MKDIR_P

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Other
PAH_USERNAME
PAH_EMAIL_ADDR
PAH_HOSTNAME
PAH_OSNAME
PAH_CVSROOT
PAH_HTTP_PROXY
PAH_HTTPS_PROXY

AC_CONFIG_FILES([Makefile
	         src/Makefile
		 src/bash/Makefile
		 src/X11/Makefile
		 test/Makefile])
AC_OUTPUT
